[package]
name = "symbolicator-stress"
publish = false
version = "25.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
axum = "0.7.2"
clap = { version = "4.3.2", features = ["derive"] }
futures = "0.3.12"
humantime = "2.0.1"
sentry = { version = "0.34.0", features = [
    "anyhow",
    "debug-images",
    "tracing",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.14"
sketches-ddsketch = "0.3.0"
symbolicator-js = { path = "../symbolicator-js" }
symbolicator-native = { path = "../symbolicator-native" }
symbolicator-service = { path = "../symbolicator-service" }
symbolicator-test = { path = "../symbolicator-test" }
tempfile = "3.2.0"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
