[package]
name = "symbolicator-stress"
publish = false
version = "25.12.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
sentry = { workspace = true, features = ["logs"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sketches-ddsketch = { workspace = true }
symbolicator-js = { workspace = true }
symbolicator-native = { workspace = true }
symbolicator-service = { workspace = true }
symbolicator-test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }
