[package]
name = "symbolicator-test"
version = "24.5.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[dependencies]
axum = { workspace = true }
humantime = { workspace = true }
insta = { workspace = true, features = ["redactions", "yaml"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "json", "stream", "hickory-dns", "multipart"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
