[package]
name = "symbolicator-test"
version = "25.1.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.7.2"
humantime = "2.0.1"
insta = { version = "1.18.0", features = ["redactions", "yaml"] }
regex = "1.5.5"
reqwest = { workspace = true, features = ["gzip", "json", "stream", "hickory-dns", "multipart"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.94"
symbolicator-sources = { path = "../symbolicator-sources" }
tempfile = "3.2.0"
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
