[package]
name = "symbolicator"
version = "24.5.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"
default-run = "symbolicator"

[features]
https = ["axum-server/tls-rustls", "symbolicator-service/https"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
axum-server = { workspace = true }
clap = { workspace = true, features = ["derive"] }
console = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
sentry = { workspace = true, features = ["anyhow", "debug-images", "tracing", "tower", "tower-http"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
symbolic = { workspace = true }
symbolicator-crash = { workspace = true, optional = true }
symbolicator-js = { workspace = true }
symbolicator-native = { workspace = true }
symbolicator-proguard = { workspace = true }
symbolicator-service = { workspace = true }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tokio-metrics = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "time"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
insta = { workspace = true, features = ["redactions", "yaml"] }
reqwest = { workspace = true, features = ["multipart"] }
symbolicator-test = { path = "../symbolicator-test" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms"] }
