[package]
name = "symbolicator"
version = "25.1.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"
default-run = "symbolicator"

[features]
https = ["axum-server/tls-rustls", "symbolicator-service/https"]

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.7.2", features = ["multipart"] }
axum-server = "0.6.0"
clap = { version = "4.3.2", features = ["derive"] }
console = "0.15.0"
futures = "0.3.12"
hostname = "0.4.0"
sentry = { version = "0.34.0", features = [
    "anyhow",
    "debug-images",
    "tracing",
    "tower",
    "tower-http",
] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
symbolic = { workspace = true }
symbolicator-crash = { path = "../symbolicator-crash", optional = true }
symbolicator-js = { path = "../symbolicator-js" }
symbolicator-native = { path = "../symbolicator-native" }
symbolicator-proguard = { path = "../symbolicator-proguard" }
symbolicator-service = { path = "../symbolicator-service" }
symbolicator-sources = { path = "../symbolicator-sources" }
tempfile = "3.2.0"
thiserror = "1.0.31"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tokio-metrics = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tower = "0.4"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }

[dev-dependencies]
insta = { version = "1.18.0", features = ["redactions", "yaml"] }
reqwest = { workspace = true, features = ["multipart"] }
symbolicator-test = { path = "../symbolicator-test" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
