[package]
name = "symbolicator"
version = "25.11.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license-file = "../../LICENSE.md"
default-run = "symbolicator"

[features]
https = ["axum-server/tls-rustls", "symbolicator-service/https"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
axum-server = { workspace = true }
clap = { workspace = true }
console = { workspace = true}
futures = { workspace = true}
hostname = { workspace = true}
humantime =  { workspace = true }
rustls = { workspace = true }
sentry = { workspace = true, features = ["release-health", "tower", "tower-http"] }
serde = { workspace = true }
serde_json = { workspace = true}
symbolic = { workspace = true }
symbolicator-crash = { workspace = true, optional = true }
symbolicator-js = { workspace = true }
symbolicator-native = { workspace = true }
symbolicator-proguard = { workspace = true }
symbolicator-service = { workspace = true }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true}
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tokio-metrics = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tower = { workspace = true}
tower-layer = { workspace = true}
tower-service = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
symbolicator-test = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }
