[package]
name = "symbolicli"
version = "23.7.0"
edition = "2021"
authors = ["Sentry <hello@getsentry.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.3.2", features = ["derive"] }
dirs = "5.0.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
serde_yaml = "0.9.14"
symbolic = "12.1.5"
symbolicator-service = { path = "../symbolicator-service" }
symbolicator-sources = { path = "../symbolicator-sources" }
tempfile = "3.3.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "0.7.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "local-time", "env-filter", "json"] }
url = "2.3.1"
