[package]
name = "symbolicli"
version = "25.1.0"
edition = "2021"
authors = ["Sentry <hello@getsentry.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.3.2", features = ["derive"] }
dirs = "5.0.0"
prettytable-rs = "0.10.0"
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
symbolic = { workspace = true }
symbolicator-js = { path = "../symbolicator-js" }
symbolicator-native = { path = "../symbolicator-native" }
symbolicator-service = { path = "../symbolicator-service" }
symbolicator-sources = { path = "../symbolicator-sources" }
tempfile = "3.3.0"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
toml = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
