[package]
name = "symbolicli"
version = "25.11.0"
edition = "2024"
authors = ["Sentry <hello@getsentry.com>"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
prettytable-rs = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symbolic = { workspace = true }
symbolicator-js = { workspace = true }
symbolicator-native = { workspace = true }
symbolicator-service = { workspace = true }
symbolicator-sources = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
