[package]
name = "symsorter"
version = "25.1.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.57"
chrono = { version = "0.4.19", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
clap = { version = "4.3.2", features = ["derive"] }
console = "0.15.0"
once_cell = "1.18.0"
rayon = "1.5.2"
regex = "1.5.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
symbolic = { workspace = true, features = ["debuginfo-serde"] }
walkdir = "2.3.1"
# NOTE: zip:0.6 by default depends on a version of zstd which conflicts with our other dependencies
zip = { version = "2.1.1", default-features = false, features = [
    "deflate",
    "bzip2",
] }
zstd = "0.13.0"
