[package]
name = "symsorter"
version = "25.7.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symbolic = { workspace = true, features = ["debuginfo-serde"] }
walkdir = { workspace = true }
zip = { workspace = true, features = ["bzip2"] }
zstd = { workspace = true }
