[package]
name = "wasm-split"
version = "24.11.0"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.3.2", features = ["derive"] }
hex = "0.4.2"
uuid = { version = "1.0.0", features = ["v4"] }
wasmbin = { version = "0.8.1", features = ["exception-handling"] }
