[package]
name = "wasm-split"
version = "25.11.1"
authors = ["Sentry <hello@getsentry.com>"]
edition = "2024"
license-file = "../../LICENSE.md"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
wasmbin = { workspace = true }
